Added code coverage checking